Changed to dotnet core 2.2

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Start <a href="./sql-syringe">SQL Syringe</a></p>
-    </div>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Browse to <a href="./sql-syringe">SQL Syringe</a>.</p>
+</div>
