--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using SylSyringe.Practice.Core3
-@using SylSyringe.Practice.Core3.Data
-@namespace SylSyringe.Practice.Core3.Pages
+@using SqlSyringe.Practice.Core22
+@using SqlSyringe.Practice.Core22.Data
+@namespace SqlSyringe.Practice.Core22.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
